tests/reject/match_dup_arm.ty
# A match arm may not be duplicated. Both compilers must reject.
enum Color:
    Red
    Green

fn main():
    c := Red
    match c:
        Red: println("a")
        Red: println("b")
        Green: println("g")
